fix: prevent priority squares from being weirdly aligned at certain device width on tasks page

--- a/styles/tasks.css
+++ b/styles/tasks.css
@@ -77,6 +77,10 @@
   white-space: nowrap;
 }
 
+.task__priority {
+  display: flex;
+}
+
 .task__status--open {
   color: #ff5964;
 }
